--- a/SDDS/.classpath
+++ b/SDDS/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="src" path="src/main/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="C:/Data/Development/javalib/xstream-1.4.3/lib/xstream-1.4.3.jar"/>
-	<classpathentry kind="lib" path="C:/Data/Development/javalib/xstream-1.4.3/lib/xstream/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="C:/Data/Development/javalib/xstream-1.4.3/lib/xstream/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB/xstream-1.4.4/lib/xstream/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB/xstream-1.4.4/lib/xstream/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB/xstream-1.4.4/lib/xstream-1.4.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
